# Search_Engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  converterjson.cpp  converterjson.h  invertedIndex.cpp  invertedIndex.h  main.cpp  requests.json  searchServer.cpp  searchServer.h
include/: converterjson.h  invertedIndex.h
resources/: file000.txt  file001.txt  file002.txt
src/: CMakeLists.txt  converterjson.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  search_engine_test.cc
